# WiNear-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.optimized  README.md  chat_fasiapi_example.py  docker-compose.yml  pyproject.toml
.github/workflows/: build-push.yml
app/: main.py
app/constants/: result_keyword.py  result_keyword_ver2.py
app/core/: config.py
app/dependencies/: db.py  llm.py
app/repositories/: chat_session_repository.py  user_features_repository.py  user_summary_repository.py
app/routers/: chat.py  recommend.py  user_features.py  user_summary.py
app/schemas/: chat.py  recommend.py  user_features.py  user_summary.py
app/services/: ai_client.py  ai_recommend_client.py  analysis_result.py  chat_prompts.py
