[project]
name = "winear-backend"
version = "0.1.0"
description = "WiNear(5060 세대를 위한 여행 동반자 & 여행지 추천 서비스) 백앤드 시스템입니다."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "motor>=3.3.1",
  "python-dotenv>=1.0.1",
  "pymongo>=4.8,<5",
  "langchain-openai>=0.1.6",
  "redis>=5.0.0",
  "httpx>=0.28.0"
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
